--- a/insreg.html
+++ b/insreg.html
@@ -9,10 +9,10 @@
 <body>
 <div style="height: 10px"></div>
 <h1><tt style="font: 90% Courier;">insreg</tt> VPO preparation tool documentation</h1>
-<p class="pdft">by Bernard Greenberg, December 2017 (version of <b>1/7/2018 23:00</b> <tt>insreg</tt> distro <b>1.0.10</b>)</p>
+<p class="pdft">by Bernard Greenberg, December 2017 (version of <b>2/3/2024 20:00</b> <tt>insreg</tt> GitHub status <b>1.0.13</b>)</p>
 <p class="pdft" style="padding-bottom:30px"></p>
 
-<p><b>VPOMIDITools</b> Copyright © 2016-2020 by Bernard Greenberg. GNU General Public License Version 3 applies. Please see <a href="LICENSE">LICENSE</a> for details.</p>
+<p><b>VPOMIDITools</b> Copyright © 2016-2024 by Bernard Greenberg. GNU General Public License Version 3 applies. Please see <a href="LICENSE">LICENSE</a> for details.</p>
 
 <h2>Introduction</h2>
 
@@ -39,7 +39,7 @@
 
 </dl>
 
-<p>To use <tt>insreg</tt>, you must have an operative python (Version 2 or 3) and the <span class="smc">YAML</span> parsing system (<tt>pyyaml</tt>) installed in it: see <a href="index.html#requisites">the “index” document</a> for instructions for obtaining and using them.</p>
+<p>To use <tt>insreg</tt>, you must have an operative python (Version 3) and the <span class="smc">YAML</span> parsing system (<tt>pyyaml</tt>) installed in it: see <a href="index.html#requisites">the “index” document</a> for instructions for obtaining and using them. Python 2 is no longer supported.</p>
 
 <h2>Table of Contents</h2>
 
